# ERDetect

./: .dockerignore  .gitignore  Dockerfile  README.md  main_command.py  main_gui.py  main_run.py  metric_callbacks.py  n1detect_config.py  n1detect_run.py  pyproject.toml  run.py  run_mem.py  setup.cfg
app/: config.py  detection.py  peak_finder.py  views.py
erdetect/: __init__.py  _erdetect.py  erdetect.py  main_cli.py  main_gui.py  metric_callbacks.py
erdetect/app/: config.py  views.py
erdetect/core/: config.py
erdetect/core/metrics/: metric_cross_proj.py  metric_interface.py  metric_waveform.py
erdetect/utils/: misc.py
erdetect/views/: gui.py
functions/: ieeg_baselinesubtract.py  ieeg_detect_n1.py  ieeg_detect_n1peak.py  load_bids.py  misc.py  peak_finder.py
pymef/mef_file/: meflib.c
tests/: test_thresholdsAndMetrics.py
utils/: IeegDataReader.py  bids.py  misc.py  visualization.py
